<resources>
    <string name="app_name">SLIP</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_ask">계정이 있으신가요?</string>
    <string name="login_switch"><u>가입하기</u></string>
    <string name="login_k">로그인</string>
    <string name="Password_k">비밀번호</string>
    <string name="Id_k">아이디</string>
    <string name="Id_k2">아이디</string>
    <string name="password_confirm_k">비밀번호 확인</string>
    <string name="login_text_blue_k">로그인하기</string>
    <string-array name="select_place_region">
        <item>아빠집 거실</item>
        <item>아빠집 안방</item>
        <item>할머니집 거실</item>
        <item>할머니집 부엌</item>
    </string-array>
</resources>